kubernetes-manifests/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: postgres-deployment
  template:
    metadata:
      labels:
        app: postgres-deployment
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
