kubernetes-manifests/hobbysite-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hobbysite-balancer
spec:
  type: LoadBalancer
  loadBalancerIP: 34.92.178.3
  selector:
    name: hobbysite-deployment
