kubernetes-manifests/postgres-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-deployment
  labels:
    app: postgres-deployment
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres-deployment
