kubernetes-manifests/global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "global-ingress"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: postgres-deployment
            port:
              number: 5432
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-lb-svc
            port:
              number: 80
